--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Simple Canvas Game</title>
+		<title>抓住那只617</title>
 	</head>
 	<body>
 		<script src="js/game.js"></script>
